<resources>
    <string name="app_name">GridLayoutTest(Calculator UI)</string>
    <string name="button">Button</string>
    <string name="center">Center</string>
    <string name="mod_operation">%</string>
    <string name="plus_operation">+</string>
    <string name="minus_operation">-</string>
    <string name="ans_operation">ANS</string>
    <string name="multiply_operation">x</string>
    <string name="mode_operation">%</string>
    <string name="div_operation">/</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="del">DEL</string>
    <string name="ac">AC</string>
</resources>
