<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_dark"
        android:text="@string/div_operation"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/minusButton"
        app:layout_constraintRight_toRightOf="@+id/minusButton"
        app:layout_constraintTop_toBottomOf="@+id/minusButton"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/modeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/background_dark"
        android:text="@string/mode_operation"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="@+id/ansButton"
        app:layout_constraintTop_toBottomOf="@+id/ansButton"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/background_dark"
        android:text="@string/plus_operation"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/minusButton"
        app:layout_constraintTop_toTopOf="@+id/minusButton"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/display"
        android:layout_width="286dp"
        android:layout_height="67dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        android:duplicateParentState="false"
        android:focusable="false"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields"
        tools:layout_editor_absoluteY="24dp" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-11dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/background_dark"
        android:text="@string/multiply_operation"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/plusButton"
        app:layout_constraintTop_toBottomOf="@+id/plusButton"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/background_dark"
        android:text="@string/minus_operation"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ansButton"
        android:layout_width="87dp"
        android:layout_height="53dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/background_dark"
        android:text="@string/ans_operation"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/minusButton"
        tools:ignore="RtlHardcoded" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="344dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <GridLayout
        android:id="@+id/numberPanel"
        android:layout_width="284dp"
        android:layout_height="223dp"
        android:layout_marginBottom="41dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        android:columnCount="7"
        android:foregroundGravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:rowOrderPreserved="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintRight_toLeftOf="@+id/guideline4">


        <Button
            android:id="@+id/button6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/_6"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/_2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="68dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/_1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/_9"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/_8"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonOFF"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/del"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/_5"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/_4"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/_7"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonAC"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="3"
            android:layout_row="2"
            android:includeFontPadding="false"
            android:text="@string/ac"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/_0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_marginBottom="10dp"
            android:layout_row="1"
            android:text="@string/_3"
            android:textSize="30sp" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>